--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
+    "swiper": "^9.3.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
