--- a/web.config
+++ b/web.config
@@ -15,5 +15,10 @@
        </rule>
       </rules>
     </rewrite>
+    <staticContent>
+        <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff" />
+        <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+        <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
  </system.webServer>
 </configuration>
