--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-    "semi": true,
-    "tabWidth": 2,
-    "printWidth": 100,
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "bracketSameLine": true
+  "semi": true,
+  "tabWidth": 2,
+  "printWidth": 100,
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "endOfLine": "crlf",
+  "arrowParrens": "always",
+  "useTabs": false
 }
