--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "ES2019", "WebWorker"],
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
@@ -19,7 +19,8 @@
     "noImplicitReturns": true,
     "exactOptionalPropertyTypes": true,
     "strictFunctionTypes": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "downlevelIteration": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "typings"]
