--- a/.github/workflows/main_cineclub.yml
+++ b/.github/workflows/main_cineclub.yml
@@ -24,11 +24,10 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: yarn install, build, and test
+      - name: yarn install, build
         run: |
           yarn install --frozen-lockfile
           yarn run build --if-present
-          yarn test
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -57,6 +56,3 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D62A0E444E034CDE8B8FB07228DCD56E }}
           package: .
-        env:
-          REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
-          REACT_APP_IMG_URL: ${{ secrets.REACT_APP_IMG_URL }}
