--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
     "@types/swiper": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
