--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "noImplicitReturns": true,
-    "exactOptionalPropertyTypes": true,
+    "exactOptionalPropertyTypes": false,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "downlevelIteration": true
